tests/errors/sem.invalid-inferred.decl.or
main :: () -> void {
    x: !u = true;
    x;
};
